# alexa-skill-gemini

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-18-alexa-gemini-assistant.md
docs/superpowers/specs/: 2026-03-18-alexa-gemini-assistant-design.md
interaction_model/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  it-IT.json
lambda/: lambda_function.py  requirements.txt
scripts/: build_lambda.sh
src/alexa_gemini/: __init__.py  config.py
src/alexa_gemini/handlers/: __init__.py  help.py  launch.py  llm_intent.py  session_ended.py  stop_cancel.py
src/alexa_gemini/services/: gemini.py
src/alexa_gemini/utils/: text.py
tests/: conftest.py  test_config.py  test_gemini_service.py  test_handlers.py
